	PR middle-end/35800 	* expr.h (try_casesi): Adjust prototype. 	* expr.c (try_casesi): Take fallback label as extra parameter. 	Use that for gen_casesi if default_label is NULL. 	* stmt.c (expand_case): Pass fallback label to try_casesi, 	make sure to fill gaps with a fallback label if default_label 	is not present.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@133857 138bc75d-0d04-0410-961f-82ee72b054a4